Make sure bottom pixel of puller is not visible

--- a/source/css/App.css
+++ b/source/css/App.css
@@ -366,6 +366,7 @@ button.pageheader-radiobutton.active {
 	background-size: 320px 68px;
 	padding: 0;
 	margin-top: -1px;
+	margin-bottom: 1px;
 	box-shadow: inset 0 -1px 10px #333;
 }
 
